--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "vant": "^2.1.1",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
