--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "clipboard": "^2.0.6",
     "echarts": "^4.2.1",
     "element-ui": "2.7.2",
     "js-cookie": "2.2.0",
